openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: spring-demo
  name: spring-demo-deployment
  namespace: azure-project
spec:
  replicas: 1 
  minReadySeconds: 45
  selector:
    matchLabels:
      app: spring-demo
  template:
    metadata:
      labels:
        app: spring-demo
    spec:
      containers:
      - name: spring-demo
        image: us.icr.io/azure-demo/java-test:v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: liveness-port
          containerPort: 8080
        resources: #CHANGE
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1024Mi #256Mi 
        readinessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
        livenessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 5
          periodSeconds: 10
          initialDelaySeconds: 60
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: 
    app: spring-demo
  name: spring-demo-service
  namespace: azure-project
spec:
  ports:
  - port: 8080 #CHANGE
    protocol: TCP
    targetPort: 8080 #CHANGE
  selector:
    app: spring-demo
---
apiVersion: v1
kind: Route
metadata:
  name: spring-demo
spec:
  path: "/"
  port:
    targetPort: port-8080 
  to:
    kind: Service
    name: spring-demo-service
